Alterado/BaseProject/compilador.output
Terminais sem uso na gramática

    TYPE
    ARRAY
    OF
    ABRE_COLCHETES
    FECHA_COLCHETES
    ABRE_CHAVES
    FECHA_CHAVES
    LOWER_THEN_ELSE


Estado 173 conflitos: 1 de deslocamento/redução


Gramática

    0 $accept: programa $end

    1 $@1: %empty

    2 programa: PROGRAM IDENT $@1 ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    3 $@2: %empty

    4 $@3: %empty

    5 bloco: parte_declara_rotulo parte_declara_vars $@2 parte_declara_subrotinas $@3 comando_composto

    6 parte_declara_rotulo: LABEL lista_labels PONTO_E_VIRGULA
    7                     | comando_vazio

    8 lista_labels: lista_labels VIRGULA ident_labels
    9             | ident_labels

   10 ident_labels: NUMERO

   11 tipo: TIPO

   12 $@4: %empty

   13 parte_declara_vars: $@4 VAR declara_vars
   14                   | %empty

   15 declara_vars: declara_vars declara_var
   16             | declara_var

   17 $@5: %empty

   18 $@6: %empty

   19 declara_var: $@5 lista_id_var DOIS_PONTOS tipo $@6 PONTO_E_VIRGULA

   20 lista_id_var: lista_id_var VIRGULA IDENT
   21             | IDENT

   22 lista_idents: lista_idents VIRGULA ident_params
   23             | ident_params

   24 ident_params: IDENT

   25 $@7: %empty

   26 parte_declara_subrotinas: parte_declara_subrotinas declara_proc $@7 PONTO_E_VIRGULA
   27                         | parte_declara_subrotinas declara_func PONTO_E_VIRGULA
   28                         | comando_vazio

   29 $@8: %empty

   30 $@9: %empty

   31 declara_proc: PROCEDURE IDENT $@8 parametros_formais_ou_vazio $@9 PONTO_E_VIRGULA bloco

   32 $@10: %empty

   33 $@11: %empty

   34 declara_func: FUNCTION IDENT $@10 parametros_formais_ou_vazio DOIS_PONTOS tipo $@11 PONTO_E_VIRGULA bloco

   35 parametros_formais_ou_vazio: parametros_formais
   36                            | comando_vazio

   37 parametros_formais: ABRE_PARENTESES parametros FECHA_PARENTESES

   38 parametros: parametros PONTO_E_VIRGULA secao_parametros_formais
   39           | secao_parametros_formais

   40 $@12: %empty

   41 secao_parametros_formais: var_ou_vazio $@12 lista_idents DOIS_PONTOS tipo

   42 var_ou_vazio: VAR
   43             | %empty

   44 comando_composto: T_BEGIN comandos T_END

   45 comandos: comando_sem_rotulo
   46         | comandos PONTO_E_VIRGULA comando_sem_rotulo

   47 comando_vazio: %empty

   48 comando_sem_rotulo: atribuicao_proc
   49                   | label_goto
   50                   | desvio
   51                   | comando_composto
   52                   | comando_condicional
   53                   | comando_repetitivo
   54                   | escrita
   55                   | leitura

   56 $@13: %empty

   57 label_goto: NUMERO $@13 DOIS_PONTOS comando_sem_rotulo

   58 $@14: %empty

   59 atribuicao_proc: IDENT $@14 a_continua

   60 $@15: %empty

   61 a_continua: ATRIBUICAO $@15 atribuicao
   62           | procedimento_sem_parametro
   63           | chama_procedimento

   64 atribuicao: expressao

   65 $@16: %empty

   66 $@17: %empty

   67 chama_procedimento: $@16 ABRE_PARENTESES $@17 lista_expressoes FECHA_PARENTESES

   68 procedimento_sem_parametro: %empty

   69 desvio: GOTO NUMERO

   70 $@18: %empty

   71 $@19: %empty

   72 comando_condicional: IF expressao $@18 THEN comando_sem_rotulo $@19 else_ou_vazio

   73 else_ou_vazio: ELSE comando_sem_rotulo
   74              | comando_vazio

   75 $@20: %empty

   76 $@21: %empty

   77 comando_repetitivo: WHILE $@20 expressao $@21 DO comando_sem_rotulo

   78 $@22: %empty

   79 lista_expressoes: expressao $@22 VIRGULA lista_expressoes
   80                 | expressao

   81 expressao: expressao_simples
   82          | expressao_simples relacao expressao_simples

   83 relacao: IGUAL
   84        | DIFERENTE
   85        | MENOR
   86        | MENOR_IGUAL
   87        | MAIOR_IGUAL
   88        | MAIOR

   89 expressao_simples: expressao_simples mais_menos_or termo
   90                  | mais_menos_vazio termo

   91 mais_menos_vazio: MAIS
   92                 | MENOS
   93                 | %empty

   94 mais_menos_or: MAIS
   95              | MENOS
   96              | OR

   97 termo: termo vezes_div_and fator
   98      | fator

   99 vezes_div_and: VEZES
  100              | DIV
  101              | AND

  102 procedimento_ou_vazio: chama_procedimento
  103                      | comando_vazio

  104 fator: variavel procedimento_ou_vazio
  105      | numero
  106      | VALOR_BOOL
  107      | ABRE_PARENTESES expressao FECHA_PARENTESES
  108      | NOT fator

  109 variavel: IDENT

  110 numero: NUMERO

  111 leitura: READ ABRE_PARENTESES leitura_itens FECHA_PARENTESES

  112 leitura_itens: leitura_itens VIRGULA item_leitura
  113              | item_leitura

  114 item_leitura: IDENT

  115 escrita: WRITE ABRE_PARENTESES escreve_itens FECHA_PARENTESES

  116 escreve_itens: escreve_itens VIRGULA expressao
  117              | expressao


Terminais, com as regras onde eles aparecem

    $end (0) 0
    error (256)
    PROGRAM (258) 2
    LABEL (259) 6
    TYPE (260)
    ARRAY (261)
    OF (262)
    VAR (263) 13 42
    PROCEDURE (264) 31
    FUNCTION (265) 34
    T_BEGIN (266) 44
    T_END (267) 44
    GOTO (268) 69
    IF (269) 72
    THEN (270) 72
    ELSE (271) 73
    WHILE (272) 77
    DO (273) 77
    OR (274) 96
    AND (275) 101
    NOT (276) 108
    DIV (277) 100
    ATRIBUICAO (278) 61
    PONTO_E_VIRGULA (279) 2 6 19 26 27 31 34 38 46
    DOIS_PONTOS (280) 19 34 41 57
    VIRGULA (281) 8 20 22 79 112 116
    PONTO (282) 2
    ABRE_PARENTESES (283) 2 37 67 107 111 115
    FECHA_PARENTESES (284) 2 37 67 107 111 115
    ABRE_COLCHETES (285)
    FECHA_COLCHETES (286)
    ABRE_CHAVES (287)
    FECHA_CHAVES (288)
    IDENT (289) 2 20 21 24 31 34 59 109 114
    MAIOR (290) 88
    MENOR (291) 85
    IGUAL (292) 83
    MAIS (293) 91 94
    MENOS (294) 92 95
    VEZES (295) 99
    NUMERO (296) 10 57 69 110
    DIFERENTE (297) 84
    MENOR_IGUAL (298) 86
    MAIOR_IGUAL (299) 87
    VALOR_BOOL (300) 106
    TIPO (301) 11
    READ (302) 111
    WRITE (303) 115
    LOWER_THEN_ELSE (304)


Não terminais com as regras onde eles aparecem

    $accept (50)
        à esquerda: 0
    programa (51)
        à esquerda: 2
        à direita: 0
    $@1 (52)
        à esquerda: 1
        à direita: 2
    bloco (53)
        à esquerda: 5
        à direita: 2 31 34
    $@2 (54)
        à esquerda: 3
        à direita: 5
    $@3 (55)
        à esquerda: 4
        à direita: 5
    parte_declara_rotulo (56)
        à esquerda: 6 7
        à direita: 5
    lista_labels (57)
        à esquerda: 8 9
        à direita: 6 8
    ident_labels (58)
        à esquerda: 10
        à direita: 8 9
    tipo <int_value> (59)
        à esquerda: 11
        à direita: 19 34 41
    parte_declara_vars (60)
        à esquerda: 13 14
        à direita: 5
    $@4 (61)
        à esquerda: 12
        à direita: 13
    declara_vars (62)
        à esquerda: 15 16
        à direita: 13 15
    declara_var (63)
        à esquerda: 19
        à direita: 15 16
    $@5 (64)
        à esquerda: 17
        à direita: 19
    $@6 (65)
        à esquerda: 18
        à direita: 19
    lista_id_var (66)
        à esquerda: 20 21
        à direita: 19 20
    lista_idents (67)
        à esquerda: 22 23
        à direita: 2 22 41
    ident_params (68)
        à esquerda: 24
        à direita: 22 23
    parte_declara_subrotinas (69)
        à esquerda: 26 27 28
        à direita: 5 26 27
    $@7 (70)
        à esquerda: 25
        à direita: 26
    declara_proc (71)
        à esquerda: 31
        à direita: 26
    $@8 (72)
        à esquerda: 29
        à direita: 31
    $@9 (73)
        à esquerda: 30
        à direita: 31
    declara_func (74)
        à esquerda: 34
        à direita: 27
    $@10 (75)
        à esquerda: 32
        à direita: 34
    $@11 (76)
        à esquerda: 33
        à direita: 34
    parametros_formais_ou_vazio (77)
        à esquerda: 35 36
        à direita: 31 34
    parametros_formais (78)
        à esquerda: 37
        à direita: 35
    parametros (79)
        à esquerda: 38 39
        à direita: 37 38
    secao_parametros_formais (80)
        à esquerda: 41
        à direita: 38 39
    $@12 (81)
        à esquerda: 40
        à direita: 41
    var_ou_vazio (82)
        à esquerda: 42 43
        à direita: 41
    comando_composto (83)
        à esquerda: 44
        à direita: 5 51
    comandos (84)
        à esquerda: 45 46
        à direita: 44 46
    comando_vazio (85)
        à esquerda: 47
        à direita: 7 28 36 74 103
    comando_sem_rotulo (86)
        à esquerda: 48 49 50 51 52 53 54 55
        à direita: 45 46 57 72 73 77
    label_goto (87)
        à esquerda: 57
        à direita: 49
    $@13 (88)
        à esquerda: 56
        à direita: 57
    atribuicao_proc (89)
        à esquerda: 59
        à direita: 48
    $@14 (90)
        à esquerda: 58
        à direita: 59
    a_continua (91)
        à esquerda: 61 62 63
        à direita: 59
    $@15 (92)
        à esquerda: 60
        à direita: 61
    atribuicao (93)
        à esquerda: 64
        à direita: 61
    chama_procedimento (94)
        à esquerda: 67
        à direita: 63 102
    $@16 (95)
        à esquerda: 65
        à direita: 67
    $@17 (96)
        à esquerda: 66
        à direita: 67
    procedimento_sem_parametro (97)
        à esquerda: 68
        à direita: 62
    desvio (98)
        à esquerda: 69
        à direita: 50
    comando_condicional (99)
        à esquerda: 72
        à direita: 52
    $@18 (100)
        à esquerda: 70
        à direita: 72
    $@19 (101)
        à esquerda: 71
        à direita: 72
    else_ou_vazio (102)
        à esquerda: 73 74
        à direita: 72
    comando_repetitivo (103)
        à esquerda: 77
        à direita: 53
    $@20 (104)
        à esquerda: 75
        à direita: 77
    $@21 (105)
        à esquerda: 76
        à direita: 77
    lista_expressoes (106)
        à esquerda: 79 80
        à direita: 67 79
    $@22 (107)
        à esquerda: 78
        à direita: 79
    expressao <int_value> (108)
        à esquerda: 81 82
        à direita: 64 72 77 79 80 107 116 117
    relacao <str_value> (109)
        à esquerda: 83 84 85 86 87 88
        à direita: 82
    expressao_simples <int_value> (110)
        à esquerda: 89 90
        à direita: 81 82 89
    mais_menos_vazio <str_value> (111)
        à esquerda: 91 92 93
        à direita: 90
    mais_menos_or <str_value> (112)
        à esquerda: 94 95 96
        à direita: 89
    termo <int_value> (113)
        à esquerda: 97 98
        à direita: 89 90 97
    vezes_div_and <str_value> (114)
        à esquerda: 99 100 101
        à direita: 97
    procedimento_ou_vazio (115)
        à esquerda: 102 103
        à direita: 104
    fator <int_value> (116)
        à esquerda: 104 105 106 107 108
        à direita: 97 98 108
    variavel <int_value> (117)
        à esquerda: 109
        à direita: 104
    numero <int_value> (118)
        à esquerda: 110
        à direita: 105
    leitura (119)
        à esquerda: 111
        à direita: 55
    leitura_itens (120)
        à esquerda: 112 113
        à direita: 111 112
    item_leitura (121)
        à esquerda: 114
        à direita: 112 113
    escrita (122)
        à esquerda: 115
        à direita: 54
    escreve_itens (123)
        à esquerda: 116 117
        à direita: 115 116


Estado 0

    0 $accept: • programa $end

    PROGRAM  deslocar, e ir ao estado 1

    programa  ir ao estado 2


Estado 1

    2 programa: PROGRAM • IDENT $@1 ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  deslocar, e ir ao estado 3


Estado 2

    0 $accept: programa • $end

    $end  deslocar, e ir ao estado 4


Estado 3

    2 programa: PROGRAM IDENT • $@1 ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    $padrão  reduzir usando a regra 1 ($@1)

    $@1  ir ao estado 5


Estado 4

    0 $accept: programa $end •

    $padrão  aceitar


Estado 5

    2 programa: PROGRAM IDENT $@1 • ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    ABRE_PARENTESES  deslocar, e ir ao estado 6


Estado 6

    2 programa: PROGRAM IDENT $@1 ABRE_PARENTESES • lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  deslocar, e ir ao estado 7

    lista_idents  ir ao estado 8
    ident_params  ir ao estado 9


Estado 7

   24 ident_params: IDENT •

    $padrão  reduzir usando a regra 24 (ident_params)


Estado 8

    2 programa: PROGRAM IDENT $@1 ABRE_PARENTESES lista_idents • FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO
   22 lista_idents: lista_idents • VIRGULA ident_params

    VIRGULA           deslocar, e ir ao estado 10
    FECHA_PARENTESES  deslocar, e ir ao estado 11


Estado 9

   23 lista_idents: ident_params •

    $padrão  reduzir usando a regra 23 (lista_idents)


Estado 10

   22 lista_idents: lista_idents VIRGULA • ident_params

    IDENT  deslocar, e ir ao estado 7

    ident_params  ir ao estado 12


Estado 11

    2 programa: PROGRAM IDENT $@1 ABRE_PARENTESES lista_idents FECHA_PARENTESES • PONTO_E_VIRGULA bloco PONTO

    PONTO_E_VIRGULA  deslocar, e ir ao estado 13


Estado 12

   22 lista_idents: lista_idents VIRGULA ident_params •

    $padrão  reduzir usando a regra 22 (lista_idents)


Estado 13

    2 programa: PROGRAM IDENT $@1 ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA • bloco PONTO

    LABEL  deslocar, e ir ao estado 14

    $padrão  reduzir usando a regra 47 (comando_vazio)

    bloco                 ir ao estado 15
    parte_declara_rotulo  ir ao estado 16
    comando_vazio         ir ao estado 17


Estado 14

    6 parte_declara_rotulo: LABEL • lista_labels PONTO_E_VIRGULA

    NUMERO  deslocar, e ir ao estado 18

    lista_labels  ir ao estado 19
    ident_labels  ir ao estado 20


Estado 15

    2 programa: PROGRAM IDENT $@1 ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco • PONTO

    PONTO  deslocar, e ir ao estado 21


Estado 16

    5 bloco: parte_declara_rotulo • parte_declara_vars $@2 parte_declara_subrotinas $@3 comando_composto

    VAR      reduzir usando a regra 12 ($@4)
    $padrão  reduzir usando a regra 14 (parte_declara_vars)

    parte_declara_vars  ir ao estado 22
    $@4                 ir ao estado 23


Estado 17

    7 parte_declara_rotulo: comando_vazio •

    $padrão  reduzir usando a regra 7 (parte_declara_rotulo)


Estado 18

   10 ident_labels: NUMERO •

    $padrão  reduzir usando a regra 10 (ident_labels)


Estado 19

    6 parte_declara_rotulo: LABEL lista_labels • PONTO_E_VIRGULA
    8 lista_labels: lista_labels • VIRGULA ident_labels

    PONTO_E_VIRGULA  deslocar, e ir ao estado 24
    VIRGULA          deslocar, e ir ao estado 25


Estado 20

    9 lista_labels: ident_labels •

    $padrão  reduzir usando a regra 9 (lista_labels)


Estado 21

    2 programa: PROGRAM IDENT $@1 ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO •

    $padrão  reduzir usando a regra 2 (programa)


Estado 22

    5 bloco: parte_declara_rotulo parte_declara_vars • $@2 parte_declara_subrotinas $@3 comando_composto

    $padrão  reduzir usando a regra 3 ($@2)

    $@2  ir ao estado 26


Estado 23

   13 parte_declara_vars: $@4 • VAR declara_vars

    VAR  deslocar, e ir ao estado 27


Estado 24

    6 parte_declara_rotulo: LABEL lista_labels PONTO_E_VIRGULA •

    $padrão  reduzir usando a regra 6 (parte_declara_rotulo)


Estado 25

    8 lista_labels: lista_labels VIRGULA • ident_labels

    NUMERO  deslocar, e ir ao estado 18

    ident_labels  ir ao estado 28


Estado 26

    5 bloco: parte_declara_rotulo parte_declara_vars $@2 • parte_declara_subrotinas $@3 comando_composto

    $padrão  reduzir usando a regra 47 (comando_vazio)

    parte_declara_subrotinas  ir ao estado 29
    comando_vazio             ir ao estado 30


Estado 27

   13 parte_declara_vars: $@4 VAR • declara_vars

    $padrão  reduzir usando a regra 17 ($@5)

    declara_vars  ir ao estado 31
    declara_var   ir ao estado 32
    $@5           ir ao estado 33


Estado 28

    8 lista_labels: lista_labels VIRGULA ident_labels •

    $padrão  reduzir usando a regra 8 (lista_labels)


Estado 29

    5 bloco: parte_declara_rotulo parte_declara_vars $@2 parte_declara_subrotinas • $@3 comando_composto
   26 parte_declara_subrotinas: parte_declara_subrotinas • declara_proc $@7 PONTO_E_VIRGULA
   27                         | parte_declara_subrotinas • declara_func PONTO_E_VIRGULA

    PROCEDURE  deslocar, e ir ao estado 34
    FUNCTION   deslocar, e ir ao estado 35

    $padrão  reduzir usando a regra 4 ($@3)

    $@3           ir ao estado 36
    declara_proc  ir ao estado 37
    declara_func  ir ao estado 38


Estado 30

   28 parte_declara_subrotinas: comando_vazio •

    $padrão  reduzir usando a regra 28 (parte_declara_subrotinas)


Estado 31

   13 parte_declara_vars: $@4 VAR declara_vars •
   15 declara_vars: declara_vars • declara_var

    IDENT    reduzir usando a regra 17 ($@5)
    $padrão  reduzir usando a regra 13 (parte_declara_vars)

    declara_var  ir ao estado 39
    $@5          ir ao estado 33


Estado 32

   16 declara_vars: declara_var •

    $padrão  reduzir usando a regra 16 (declara_vars)


Estado 33

   19 declara_var: $@5 • lista_id_var DOIS_PONTOS tipo $@6 PONTO_E_VIRGULA

    IDENT  deslocar, e ir ao estado 40

    lista_id_var  ir ao estado 41


Estado 34

   31 declara_proc: PROCEDURE • IDENT $@8 parametros_formais_ou_vazio $@9 PONTO_E_VIRGULA bloco

    IDENT  deslocar, e ir ao estado 42


Estado 35

   34 declara_func: FUNCTION • IDENT $@10 parametros_formais_ou_vazio DOIS_PONTOS tipo $@11 PONTO_E_VIRGULA bloco

    IDENT  deslocar, e ir ao estado 43


Estado 36

    5 bloco: parte_declara_rotulo parte_declara_vars $@2 parte_declara_subrotinas $@3 • comando_composto

    T_BEGIN  deslocar, e ir ao estado 44

    comando_composto  ir ao estado 45


Estado 37

   26 parte_declara_subrotinas: parte_declara_subrotinas declara_proc • $@7 PONTO_E_VIRGULA

    $padrão  reduzir usando a regra 25 ($@7)

    $@7  ir ao estado 46


Estado 38

   27 parte_declara_subrotinas: parte_declara_subrotinas declara_func • PONTO_E_VIRGULA

    PONTO_E_VIRGULA  deslocar, e ir ao estado 47


Estado 39

   15 declara_vars: declara_vars declara_var •

    $padrão  reduzir usando a regra 15 (declara_vars)


Estado 40

   21 lista_id_var: IDENT •

    $padrão  reduzir usando a regra 21 (lista_id_var)


Estado 41

   19 declara_var: $@5 lista_id_var • DOIS_PONTOS tipo $@6 PONTO_E_VIRGULA
   20 lista_id_var: lista_id_var • VIRGULA IDENT

    DOIS_PONTOS  deslocar, e ir ao estado 48
    VIRGULA      deslocar, e ir ao estado 49


Estado 42

   31 declara_proc: PROCEDURE IDENT • $@8 parametros_formais_ou_vazio $@9 PONTO_E_VIRGULA bloco

    $padrão  reduzir usando a regra 29 ($@8)

    $@8  ir ao estado 50


Estado 43

   34 declara_func: FUNCTION IDENT • $@10 parametros_formais_ou_vazio DOIS_PONTOS tipo $@11 PONTO_E_VIRGULA bloco

    $padrão  reduzir usando a regra 32 ($@10)

    $@10  ir ao estado 51


Estado 44

   44 comando_composto: T_BEGIN • comandos T_END

    T_BEGIN  deslocar, e ir ao estado 44
    GOTO     deslocar, e ir ao estado 52
    IF       deslocar, e ir ao estado 53
    WHILE    deslocar, e ir ao estado 54
    IDENT    deslocar, e ir ao estado 55
    NUMERO   deslocar, e ir ao estado 56
    READ     deslocar, e ir ao estado 57
    WRITE    deslocar, e ir ao estado 58

    comando_composto     ir ao estado 59
    comandos             ir ao estado 60
    comando_sem_rotulo   ir ao estado 61
    label_goto           ir ao estado 62
    atribuicao_proc      ir ao estado 63
    desvio               ir ao estado 64
    comando_condicional  ir ao estado 65
    comando_repetitivo   ir ao estado 66
    leitura              ir ao estado 67
    escrita              ir ao estado 68


Estado 45

    5 bloco: parte_declara_rotulo parte_declara_vars $@2 parte_declara_subrotinas $@3 comando_composto •

    $padrão  reduzir usando a regra 5 (bloco)


Estado 46

   26 parte_declara_subrotinas: parte_declara_subrotinas declara_proc $@7 • PONTO_E_VIRGULA

    PONTO_E_VIRGULA  deslocar, e ir ao estado 69


Estado 47

   27 parte_declara_subrotinas: parte_declara_subrotinas declara_func PONTO_E_VIRGULA •

    $padrão  reduzir usando a regra 27 (parte_declara_subrotinas)


Estado 48

   19 declara_var: $@5 lista_id_var DOIS_PONTOS • tipo $@6 PONTO_E_VIRGULA

    TIPO  deslocar, e ir ao estado 70

    tipo  ir ao estado 71


Estado 49

   20 lista_id_var: lista_id_var VIRGULA • IDENT

    IDENT  deslocar, e ir ao estado 72


Estado 50

   31 declara_proc: PROCEDURE IDENT $@8 • parametros_formais_ou_vazio $@9 PONTO_E_VIRGULA bloco

    ABRE_PARENTESES  deslocar, e ir ao estado 73

    $padrão  reduzir usando a regra 47 (comando_vazio)

    parametros_formais_ou_vazio  ir ao estado 74
    parametros_formais           ir ao estado 75
    comando_vazio                ir ao estado 76


Estado 51

   34 declara_func: FUNCTION IDENT $@10 • parametros_formais_ou_vazio DOIS_PONTOS tipo $@11 PONTO_E_VIRGULA bloco

    ABRE_PARENTESES  deslocar, e ir ao estado 73

    $padrão  reduzir usando a regra 47 (comando_vazio)

    parametros_formais_ou_vazio  ir ao estado 77
    parametros_formais           ir ao estado 75
    comando_vazio                ir ao estado 76


Estado 52

   69 desvio: GOTO • NUMERO

    NUMERO  deslocar, e ir ao estado 78


Estado 53

   72 comando_condicional: IF • expressao $@18 THEN comando_sem_rotulo $@19 else_ou_vazio

    MAIS   deslocar, e ir ao estado 79
    MENOS  deslocar, e ir ao estado 80

    $padrão  reduzir usando a regra 93 (mais_menos_vazio)

    expressao          ir ao estado 81
    expressao_simples  ir ao estado 82
    mais_menos_vazio   ir ao estado 83


Estado 54

   77 comando_repetitivo: WHILE • $@20 expressao $@21 DO comando_sem_rotulo

    $padrão  reduzir usando a regra 75 ($@20)

    $@20  ir ao estado 84


Estado 55

   59 atribuicao_proc: IDENT • $@14 a_continua

    $padrão  reduzir usando a regra 58 ($@14)

    $@14  ir ao estado 85


Estado 56

   57 label_goto: NUMERO • $@13 DOIS_PONTOS comando_sem_rotulo

    $padrão  reduzir usando a regra 56 ($@13)

    $@13  ir ao estado 86


Estado 57

  111 leitura: READ • ABRE_PARENTESES leitura_itens FECHA_PARENTESES

    ABRE_PARENTESES  deslocar, e ir ao estado 87


Estado 58

  115 escrita: WRITE • ABRE_PARENTESES escreve_itens FECHA_PARENTESES

    ABRE_PARENTESES  deslocar, e ir ao estado 88


Estado 59

   51 comando_sem_rotulo: comando_composto •

    $padrão  reduzir usando a regra 51 (comando_sem_rotulo)


Estado 60

   44 comando_composto: T_BEGIN comandos • T_END
   46 comandos: comandos • PONTO_E_VIRGULA comando_sem_rotulo

    T_END            deslocar, e ir ao estado 89
    PONTO_E_VIRGULA  deslocar, e ir ao estado 90


Estado 61

   45 comandos: comando_sem_rotulo •

    $padrão  reduzir usando a regra 45 (comandos)


Estado 62

   49 comando_sem_rotulo: label_goto •

    $padrão  reduzir usando a regra 49 (comando_sem_rotulo)


Estado 63

   48 comando_sem_rotulo: atribuicao_proc •

    $padrão  reduzir usando a regra 48 (comando_sem_rotulo)


Estado 64

   50 comando_sem_rotulo: desvio •

    $padrão  reduzir usando a regra 50 (comando_sem_rotulo)


Estado 65

   52 comando_sem_rotulo: comando_condicional •

    $padrão  reduzir usando a regra 52 (comando_sem_rotulo)


Estado 66

   53 comando_sem_rotulo: comando_repetitivo •

    $padrão  reduzir usando a regra 53 (comando_sem_rotulo)


Estado 67

   55 comando_sem_rotulo: leitura •

    $padrão  reduzir usando a regra 55 (comando_sem_rotulo)


Estado 68

   54 comando_sem_rotulo: escrita •

    $padrão  reduzir usando a regra 54 (comando_sem_rotulo)


Estado 69

   26 parte_declara_subrotinas: parte_declara_subrotinas declara_proc $@7 PONTO_E_VIRGULA •

    $padrão  reduzir usando a regra 26 (parte_declara_subrotinas)


Estado 70

   11 tipo: TIPO •

    $padrão  reduzir usando a regra 11 (tipo)


Estado 71

   19 declara_var: $@5 lista_id_var DOIS_PONTOS tipo • $@6 PONTO_E_VIRGULA

    $padrão  reduzir usando a regra 18 ($@6)

    $@6  ir ao estado 91


Estado 72

   20 lista_id_var: lista_id_var VIRGULA IDENT •

    $padrão  reduzir usando a regra 20 (lista_id_var)


Estado 73

   37 parametros_formais: ABRE_PARENTESES • parametros FECHA_PARENTESES

    VAR  deslocar, e ir ao estado 92

    $padrão  reduzir usando a regra 43 (var_ou_vazio)

    parametros                ir ao estado 93
    secao_parametros_formais  ir ao estado 94
    var_ou_vazio              ir ao estado 95


Estado 74

   31 declara_proc: PROCEDURE IDENT $@8 parametros_formais_ou_vazio • $@9 PONTO_E_VIRGULA bloco

    $padrão  reduzir usando a regra 30 ($@9)

    $@9  ir ao estado 96


Estado 75

   35 parametros_formais_ou_vazio: parametros_formais •

    $padrão  reduzir usando a regra 35 (parametros_formais_ou_vazio)


Estado 76

   36 parametros_formais_ou_vazio: comando_vazio •

    $padrão  reduzir usando a regra 36 (parametros_formais_ou_vazio)


Estado 77

   34 declara_func: FUNCTION IDENT $@10 parametros_formais_ou_vazio • DOIS_PONTOS tipo $@11 PONTO_E_VIRGULA bloco

    DOIS_PONTOS  deslocar, e ir ao estado 97


Estado 78

   69 desvio: GOTO NUMERO •

    $padrão  reduzir usando a regra 69 (desvio)


Estado 79

   91 mais_menos_vazio: MAIS •

    $padrão  reduzir usando a regra 91 (mais_menos_vazio)


Estado 80

   92 mais_menos_vazio: MENOS •

    $padrão  reduzir usando a regra 92 (mais_menos_vazio)


Estado 81

   72 comando_condicional: IF expressao • $@18 THEN comando_sem_rotulo $@19 else_ou_vazio

    $padrão  reduzir usando a regra 70 ($@18)

    $@18  ir ao estado 98


Estado 82

   81 expressao: expressao_simples •
   82          | expressao_simples • relacao expressao_simples
   89 expressao_simples: expressao_simples • mais_menos_or termo

    OR           deslocar, e ir ao estado 99
    MAIOR        deslocar, e ir ao estado 100
    MENOR        deslocar, e ir ao estado 101
    IGUAL        deslocar, e ir ao estado 102
    MAIS         deslocar, e ir ao estado 103
    MENOS        deslocar, e ir ao estado 104
    DIFERENTE    deslocar, e ir ao estado 105
    MENOR_IGUAL  deslocar, e ir ao estado 106
    MAIOR_IGUAL  deslocar, e ir ao estado 107

    $padrão  reduzir usando a regra 81 (expressao)

    relacao        ir ao estado 108
    mais_menos_or  ir ao estado 109


Estado 83

   90 expressao_simples: mais_menos_vazio • termo

    NOT              deslocar, e ir ao estado 110
    ABRE_PARENTESES  deslocar, e ir ao estado 111
    IDENT            deslocar, e ir ao estado 112
    NUMERO           deslocar, e ir ao estado 113
    VALOR_BOOL       deslocar, e ir ao estado 114

    termo     ir ao estado 115
    fator     ir ao estado 116
    variavel  ir ao estado 117
    numero    ir ao estado 118


Estado 84

   77 comando_repetitivo: WHILE $@20 • expressao $@21 DO comando_sem_rotulo

    MAIS   deslocar, e ir ao estado 79
    MENOS  deslocar, e ir ao estado 80

    $padrão  reduzir usando a regra 93 (mais_menos_vazio)

    expressao          ir ao estado 119
    expressao_simples  ir ao estado 82
    mais_menos_vazio   ir ao estado 83


Estado 85

   59 atribuicao_proc: IDENT $@14 • a_continua

    ATRIBUICAO  deslocar, e ir ao estado 120

    ABRE_PARENTESES  reduzir usando a regra 65 ($@16)
    $padrão          reduzir usando a regra 68 (procedimento_sem_parametro)

    a_continua                  ir ao estado 121
    chama_procedimento          ir ao estado 122
    $@16                        ir ao estado 123
    procedimento_sem_parametro  ir ao estado 124


Estado 86

   57 label_goto: NUMERO $@13 • DOIS_PONTOS comando_sem_rotulo

    DOIS_PONTOS  deslocar, e ir ao estado 125


Estado 87

  111 leitura: READ ABRE_PARENTESES • leitura_itens FECHA_PARENTESES

    IDENT  deslocar, e ir ao estado 126

    leitura_itens  ir ao estado 127
    item_leitura   ir ao estado 128


Estado 88

  115 escrita: WRITE ABRE_PARENTESES • escreve_itens FECHA_PARENTESES

    MAIS   deslocar, e ir ao estado 79
    MENOS  deslocar, e ir ao estado 80

    $padrão  reduzir usando a regra 93 (mais_menos_vazio)

    expressao          ir ao estado 129
    expressao_simples  ir ao estado 82
    mais_menos_vazio   ir ao estado 83
    escreve_itens      ir ao estado 130


Estado 89

   44 comando_composto: T_BEGIN comandos T_END •

    $padrão  reduzir usando a regra 44 (comando_composto)


Estado 90

   46 comandos: comandos PONTO_E_VIRGULA • comando_sem_rotulo

    T_BEGIN  deslocar, e ir ao estado 44
    GOTO     deslocar, e ir ao estado 52
    IF       deslocar, e ir ao estado 53
    WHILE    deslocar, e ir ao estado 54
    IDENT    deslocar, e ir ao estado 55
    NUMERO   deslocar, e ir ao estado 56
    READ     deslocar, e ir ao estado 57
    WRITE    deslocar, e ir ao estado 58

    comando_composto     ir ao estado 59
    comando_sem_rotulo   ir ao estado 131
    label_goto           ir ao estado 62
    atribuicao_proc      ir ao estado 63
    desvio               ir ao estado 64
    comando_condicional  ir ao estado 65
    comando_repetitivo   ir ao estado 66
    leitura              ir ao estado 67
    escrita              ir ao estado 68


Estado 91

   19 declara_var: $@5 lista_id_var DOIS_PONTOS tipo $@6 • PONTO_E_VIRGULA

    PONTO_E_VIRGULA  deslocar, e ir ao estado 132


Estado 92

   42 var_ou_vazio: VAR •

    $padrão  reduzir usando a regra 42 (var_ou_vazio)


Estado 93

   37 parametros_formais: ABRE_PARENTESES parametros • FECHA_PARENTESES
   38 parametros: parametros • PONTO_E_VIRGULA secao_parametros_formais

    PONTO_E_VIRGULA   deslocar, e ir ao estado 133
    FECHA_PARENTESES  deslocar, e ir ao estado 134


Estado 94
